--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 activityCompose = "1.10.1"
 agp = "8.8.2"
-composeBom = "2025.02.00"
+composeBom = "2025.03.00"
 coreKtx = "1.15.0"
 coroutines = "1.9.0"
 espressoCore = "3.6.1"
@@ -9,15 +9,13 @@ junit = "4.13.2"
 junitVersion = "1.2.1"
 koinAndroid = "3.5.0"
 koinAndroidxCompose = "3.5.0"
-kotlin = "2.0.0"
+kotlin = "2.0.21"
 kotlinxSerializationJson = "1.7.3"
 ktor = "3.0.3"
 lifecycleRuntimeKtx = "2.8.7"
-navigationCompose = "2.8.8"
-
-# The version of Realm (3.0.0) is not compatible with the current version of Kotlin (2.0.0).
-#noinspection GradleDependency
-realm = "2.0.0"
+navigationCompose = "2.8.9"
+realm = "3.0.0"
+workRuntimeKtx = "2.10.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -48,6 +46,7 @@ ktor-client-json = { group = "io.ktor", name = "ktor-client-json", version.ref =
 ktor-client-logging = { group = "io.ktor", name = "ktor-client-logging", version.ref = "ktor" }
 ktor-client-serialization = { group = "io.ktor", name = "ktor-client-serialization", version.ref = "ktor" }
 ktor-client-content-negotiation = { group = "io.ktor", name = "ktor-client-content-negotiation", version.ref = "ktor" }
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
 
 [bundles]
 ktor-common = ["ktor-client-core", "ktor-client-json", "ktor-client-logging", "ktor-client-serialization", "ktor-client-content-negotiation", "ktor-serialization-kotlinx-json"]
